# HTTP-Networking-Course

./: Cargo.toml
course/: 1. Why HTTP.md  2. DNS.md  3. URIs and URLs.md
src/: crawl.rs  main.rs  report.rs
