[package]
name = "web_crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maplit = "1.0.2"
pretty_assertions = "1.3.0"
rand = "0.8.5"
reqwest = { version = "0.11.16", features = ["json"] }
scraper = "0.16.0"
select = "0.6.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
serde_urlencoded = "0.7.1"
tokio = { version = "1.27.0", features = ["full"] }
url = "2.3.1"
async-recursion = "1.0.4"
prettytable-rs = "0.10.0"
